--- a/assets/css/_main.css
+++ b/assets/css/_main.css
@@ -80,3 +80,9 @@ body {
 .br-lg-24 {
   border-radius: 1.5rem !important;
 }
+.btn-icon .text-danger {
+  color: var(--danger-bg-color) !important;
+}
+.text-primary {
+  color: var(--btn-primary-color) !important;
+}
