--- a/assets/css/_component_form.css
+++ b/assets/css/_component_form.css
@@ -5,7 +5,7 @@
   border-color: var(--btn-primary-color);
 }
 .form-check:has(.form-check-input:focus) {
-  box-shadow: 0 0 0 .25rem var(--btn-primary-border-focus);
+  box-shadow: 0 0 0 0.25rem var(--btn-primary-border-focus);
   border-radius: 0.5rem;
 }
 .form-check-input:focus {
@@ -79,7 +79,7 @@
   background-color: var(--white);
   border: none;
   outline: 0;
-  box-shadow: inset 0 0 0 .125rem var(--btn-primary-color);
+  box-shadow: inset 0 0 0 0.125rem var(--btn-primary-color);
 }
 
 /* Forms Validation */
@@ -152,8 +152,8 @@
   padding: 1rem 0;
 }
 .suggestions .suggestion-list .suggestion-list__item:hover {
-    cursor: pointer;
-  }
+  cursor: pointer;
+}
 @media (min-width: 992px) {
   .suggestions .suggestion-list .suggestion-list__item {
     padding: 0.75rem 0;
