fix: se agrega toast en contacto y se ajustan estilos

--- a/assets/css/_component_typography.css
+++ b/assets/css/_component_typography.css
@@ -107,3 +107,13 @@ small,
     line-height: 38.4px;
   }
 }
+
+/* Truncamiento de texto a 2 líneas */
+.ellipsis-2 {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  line-clamp: 2;
+}
