--- a/views/config/config-general.html
+++ b/views/config/config-general.html
@@ -409,34 +409,6 @@
     ></script>
 
     <!-- Toast script -->
-    <script>
-      const configToastTrigger = document.getElementById("configToastBtn");
-      const successConfigToast = document.getElementById("successConfigToast");
-      const dangerConfigToast = document.getElementById("dangerConfigToast");
-      const scrollToBottom = () => {
-        window.scrollTo({
-          top: document.body.scrollHeight,
-          behavior: "smooth",
-        });
-      };
-      if (configToastTrigger) {
-        if (successConfigToast) {
-          const successToastBootstrap =
-            bootstrap.Toast.getOrCreateInstance(successConfigToast);
-          configToastTrigger.addEventListener("click", () => {
-            successToastBootstrap.show();
-            scrollToBottom();
-          });
-        }
-        if (dangerConfigToast) {
-          const dangerToastBootstrap =
-            bootstrap.Toast.getOrCreateInstance(dangerConfigToast);
-          configToastTrigger.addEventListener("click", () => {
-            dangerToastBootstrap.show();
-            scrollToBottom();
-          });
-        }
-      }
-    </script>
+     <script src="../../js/toast.js"></script>
   </body>
 </html>
